--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expres": "0.0.5",
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.8",
-    "serverless-http": "^2.7.0"
+    "serverless-http": "^2.7.0",
+    "socket-io": "^1.0.0"
   }
 }
